AJ-1451: Add additional pacts for WSM (#414)
This adds additional pacts to cover the various WDS <-> WSM interactions
that happen via the `WorkspaceManagerDao`.